--- a/src/com/example/pi/SpreadSheet.html
+++ b/src/com/example/pi/SpreadSheet.html
@@ -14,6 +14,9 @@
     <option>Option 2</option> 
     <option>Option 3</option> 
    </vaadin-native-select> 
+   <vaadin-button plain-text _id="addButton2" :top="270px" :left="820px">
+     + 
+   </vaadin-button> 
   </vaadin-absolute-layout>  
  </body>
 </html>
