--- a/Angular/registry.html
+++ b/Angular/registry.html
@@ -15,7 +15,7 @@
       <button ng-click="toggleSidenav('left')" hide-gt-sm class="menuBtn" aria-label="Toggle Menu">
       </button>
       <h1 layout-align-gt-sm="center">
-        Engineer project
+        <md-button ng-disabled="true">Engineer project</md-button>
       </h1>
 	</div>
 	<div>
@@ -80,7 +80,7 @@
 </div>
 	<div>
 	<section layout="row" layout-sm="column" layout-align="center center" layout-wrap>
-      <md-button class="md-raised md-primary" ng-href="{{userUrl}}">register</md-button>
+      <md-button class="md-raised md-primary" ng-href="{{loginUrl}}">register</md-button>
       <md-button class="md-raised md-warn" ng-href="{{startUrl}}">cancel</md-button>
     </section>
 	</div>
