--- a/Angular/arkusz.html
+++ b/Angular/arkusz.html
@@ -1,6 +1,11 @@
 <html ng-app="BlankApp">
 
 <head>
+  <link rel="stylesheet" href="https://cdn.gitcdn.xyz/cdn/angular/bower-material/v0.11.2/angular-material.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="CSS.css">
+  <meta name="viewport" content="initial-scale=1" />
     
     <link data-require="bootstrap@*" data-semver="3.3.2" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" />
     <script data-require="jquery@2.1.3" data-semver="2.1.3" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
@@ -9,7 +14,7 @@
     <script data-require="ui-select@0.11.1" data-semver="0.11.1" src="https://cdn.rawgit.com/angular-ui/ui-select/v0.11.2/dist/select.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.8.5/css/selectize.default.css">
     <script src="https://cdn.rawgit.com/angular-ui/ui-grid.info/v3.0.7/release/3.0.7/ui-grid.min.js"></script>
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">	
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular-cookies.js"></script>
@@ -21,13 +26,13 @@
   <title>Engineer project UAM</title>
 </head>
 
-<body layout="column" ng-controller="Spr">
+<body layout="column" ng-controller="AppCtrl">
   <md-toolbar layout="row">
     <div class="md-toolbar-tools">
       <button ng-click="toggleSidenav('left')" hide-gt-sm class="menuBtn" aria-label="Toggle Menu">
       </button>
       <h1 layout-align-gt-sm="center">
-        Engineer project
+        <md-button ng-href="{{userUrl}}">Engineer project</md-button>
       </h1>
 	</div>
 	<div>
@@ -50,18 +55,19 @@
 		<md-button ng-href="{{arkuszUrl}}">stworz arkusz</md-button>
 		<md-button>wczytaj szablon</md-button>
 		<md-button>zlec badanie</md-button>
-		<md-button ng-href="{{arkUrl}}">przeprowadz badanie</md-button>
+		<md-button ng-href="{{arkuszUrl}}">przeprowadz badanie</md-button>
     </md-sidenav>
-  
+
     <md-content layout="column" id="content" flex class="md-padding">
-      <div ng-controller="Spr" layout="column" ng-cloak class="md-inline-form">
-		<md-content md-theme="docs-dark" layout-gt-sm="row" layout-padding>
-		</md-content>
-		<md-content layout-padding>
-	<section layout="column" layout-sm="column" layout-align="center center" layout-wrap>
-		  <form  name="userForm">
-                {{serwis}}
-			<div layout-gt-sm="column">
+		<div ng-controller="AppCtrl" layout="column" ng-cloak class="md-inline-form">
+  <md-content md-theme="docs-dark" layout-gt-sm="row" layout-padding>
+  </md-content>
+  <md-content layout-padding>
+    <div>
+	<section layout="row" layout-sm="column" layout-align="center center" layout-wrap>
+      <form name="userForm">
+        {{serwis}}
+			<div layout-gt-sm="row">
 			  <md-input-container class="md-block" flex-gt-sm>
 				<label>Liczba operatorow</label>
 				<input ng-model="badanie.liczbaOperatorow" type="number" min="1">
@@ -74,6 +80,8 @@
 				<label>Liczba produktow</label>
 				<input ng-model="badanie.liczbaProduktow" type="number" min="5">
 			  </md-input-container>
+			</div>
+			<div layout-gt-sm="row">
 			  <md-input-container class="md-block" flex-gt-sm>
 				<label>Liczba powtorzen</label>
 				<input ng-model="badanie.liczbaPowtorzen" type="number" min="1">
@@ -86,8 +94,8 @@
 				<label>Nazwa firmy/wydzial</label>
 				<input id="nazwaFirmy" ng-model="badanie.nazwaFirmy" type="text">
 			  </md-input-container>
-			  <md-datepicker ng-model="submissionDate" md-placeholder="Enter date">
-			  </md-datepicker>
+			</div>
+			<div layout-gt-sm="row">
 			  <md-input-container class="md-block" flex-gt-sm>
 				<label>Odpowiedzialny</label>
 				<input ng-model="badanie.odpowiedzialny" type="text">
@@ -100,6 +108,10 @@
 				<label>Proces</label>
 				<input ng-model="badanie.proces"  type="text">
 			  </md-input-container>
+			  <md-datepicker ng-model="submissionDate" md-placeholder="Enter date">
+			  </md-datepicker>
+			</div>
+			<div layout-gt-sm="row">
 			  <md-input-container class="md-block" flex-gt-sm>
 				<label>Stanowisko</label>
 				<input ng-model="badanie.stanowisko"  type="text">
@@ -112,22 +124,19 @@
 				<label>Nazwa elementu</label>
 				<input ng-model="badanie.nazwaElementu" type="text">
 			  </md-input-container>
-                <md-input-container class="md-block" flex-gt-sm>
-                    <label>Nazwa elementu</label>
-                    <input ng-model="badanie.cecha" type="text">
-                </md-input-container>
 			</div>
+      </form>
 	</section>
+	</div>
+	<div>
 	<section layout="row" layout-sm="column" layout-align="center center" layout-wrap>
-			<div>
-				<md-button ng-href="#traits" ng-cLick="zlecBadanie()" class="add-tab md-primary md-raised" type="submit">Next</md-button>
-			</div>
-		  </form>
-	</section>
-</div>
-
+      <md-button ng-href="#traits" ng-cLick="zlecBadanie()" class="add-tab md-primary md-raised" type="submit">Dalej</md-button>
+    </section>
+	</div>
   </md-content>
-</div> 
+		</div> 
+    </md-content>
+  </div>
 
       
   <!-- Angular Material Dependencies -->
@@ -139,7 +148,9 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-messages.min.js"></script>
 
     <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
-  <script src="scripts/material.js"></script>
+	<script src="scripts/material.js"></script>
+	<script src="https://cdn.gitcdn.xyz/cdn/angular/bower-material/v0.11.2/angular-material.js"></script>
+	<script src="JS.js"></script>
 </body>
 
 </html>
