--- a/Angular/login.html
+++ b/Angular/login.html
@@ -37,7 +37,34 @@
 		<md-button ng-disabled="true">zlec badanie</md-button>
 		<md-button ng-disabled="true">przeprowadz badanie</md-button>
     </md-sidenav>
-  
+<!--linki zewnętrzne-->
+    <md-content layout="column" id="content" flex>
+      <div ng-controller="AppCtrl" layout="column" ng-cloak class="md-inline-form">
+  <md-content md-theme="docs-dark">
+	<md-fab-toolbar md-open="false" md-direction="left">
+    <md-fab-trigger>
+      <md-button class="md-fab md-primary">
+		<i class="material-icons">reorder</i>
+      </md-button>
+    </md-fab-trigger>
+    <md-toolbar>
+      <md-fab-actions class="md-toolbar-tools">
+        <md-button class="md-fab md-primary" ng-href="{{loginUrl}}">
+			<i class="material-icons md-24">settings_power</i>
+		</md-button>
+		<md-button class="md-fab md-primary" target="_blank" ng-href="{{WMIUrl}}">
+			WMI
+		</md-button>
+		<md-button class="md-fab md-primary" target="_blank" ng-href="{{UAMUrl}}">
+			UAM
+		</md-button>
+      </md-fab-actions>
+    </md-toolbar>
+	</md-fab-toolbar>
+  </md-content>
+	  </div>
+    </md-content>
+<!--linki zewnętrzne-->
     <md-content layout="column" id="content" flex class="md-padding">
       <div ng-controller="AppCtrl" layout="column" ng-cloak class="md-inline-form">
   <md-content md-theme="docs-dark" layout-gt-sm="row" layout-padding>
