--- a/Angular/start.html
+++ b/Angular/start.html
@@ -18,7 +18,7 @@
         <md-button ng-disabled="true">Engineer project</md-button>
       </h1>
 	</div>
-	<div>
+	<div hide-sm show-gt-sm flex>
 	<section layout="row">
 	<md-button class="md-fab md-primary" ng-href="{{UAMUrl}}">
         AMU
@@ -26,6 +26,11 @@
     <md-button class="md-fab md-primary" ng-href="{{WMIUrl}}">
 		WMI
 	</md-button>
+	</div>
+	<div show-sm hide-gt-sm flex>
+	<md-switch class="md-primary" md-no-ink aria-label="Switch No Ink" ng-model="data.cb5">
+	Menu
+	</md-switch>
 	</section>
 	</div>
   </md-toolbar>
@@ -40,8 +45,6 @@
   
     <md-content layout="column" id="content" flex class="md-padding">
       <div ng-controller="AppCtrl" layout="column" ng-cloak class="md-inline-form">
-  <md-content md-theme="docs-dark" layout-gt-sm="row" layout-padding>
-  </md-content>
   <md-content layout-padding>
 	<div>
 	<section layout="row" layout-sm="column" layout-align="center center" layout-wrap>
@@ -50,7 +53,7 @@
     </section>
 	</div>
   </md-content>
-</div> 
+	  </div> 
     </md-content>
   </div>
       
