--- a/Angular/user.html
+++ b/Angular/user.html
@@ -19,16 +19,18 @@
       </h1>
 	</div>
   </md-toolbar>
-  
+
   <div layout="row" flex class="change-my-css">
+<!--menu boczne start-->
     <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-sm')">
 		<md-button ng-href="{{arkuszUrl}}">stworz arkusz</md-button>
 		<md-button ng-href="{{loadUrl}}">wczytaj szablon</md-button>
 		<md-button>zlec badanie</md-button>
 		<md-button>przeprowadz badanie</md-button>
     </md-sidenav>
-
-    <md-content layout="column" id="content" flex>
+<!--menu boczne end-->
+<!--linki zewnętrzne start-->
+    <md-content layout="column" id="links" flex>
       <div ng-controller="AppCtrl" layout="column" ng-cloak class="md-inline-form">
   <md-content md-theme="docs-dark">
 	<md-fab-toolbar md-open="false" md-direction="left">
@@ -54,6 +56,7 @@
   </md-content>
 	  </div>
     </md-content>
+<!--linki zewnętrzne end-->
   </div>
   <!-- Angular Material Dependencies -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.6/angular.js"></script>
