--- a/Angular/load.html
+++ b/Angular/load.html
@@ -18,11 +18,10 @@
         <md-button ng-href="{{userUrl}}">Engineer project</md-button>
       </h1>
 	</div>
-	<div>
 <!--linki zewnętrzne start-->
+	<div hide-gt-sm>
     <md-content layout="column" id="links" flex>
       <div ng-controller="AppCtrl" layout="column" ng-cloak class="md-inline-form">
-  <md-content md-theme="docs-dark">
 	<md-fab-toolbar md-open="false" md-direction="left">
     <md-fab-trigger>
       <md-button class="md-fab md-primary">
@@ -43,11 +42,21 @@
       </md-fab-actions>
     </md-toolbar>
 	</md-fab-toolbar>
-  </md-content>
 	  </div>
     </md-content>
-<!--linki zewnętrzne end-->
 	</div>
+	<div hide-xs hide-sm layout="row">
+	<md-button class="md-fab md-primary" target="_blank" ng-href="{{UAMUrl}}">
+		UAM
+	</md-button>
+	<md-button class="md-fab md-primary" target="_blank" ng-href="{{WMIUrl}}">
+		WMI
+	</md-button>
+	<md-button class="md-fab md-primary" ng-href="{{loginUrl}}">
+		<i class="material-icons md-24">settings_power</i>
+	</md-button>
+	</div>
+<!--linki zewnętrzne end-->
   </md-toolbar>
   
   <div layout="row" flex class="change-my-css">
