--- a/Angular/login.html
+++ b/Angular/login.html
@@ -18,29 +18,10 @@
         <md-button ng-disabled="true">Engineer project</md-button>
       </h1>
 	</div>
-	<div>
-	<section layout="row">
-	<md-button class="md-fab md-primary" ng-href="{{UAMUrl}}">
-        AMU
-	</md-button>
-    <md-button class="md-fab md-primary" ng-href="{{WMIUrl}}">
-		WMI
-	</md-button>
-	</section>
-	</div>
-  </md-toolbar>
-  
-  <div layout="row" flex class="change-my-css">
-    <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-sm')">
-		<md-button ng-disabled="true">stworz arkusz</md-button>
-		<md-button ng-disabled="true">wczytaj szablon</md-button>
-		<md-button ng-disabled="true">zlec badanie</md-button>
-		<md-button ng-disabled="true">przeprowadz badanie</md-button>
-    </md-sidenav>
-<!--linki zewnętrzne-->
-    <md-content layout="column" id="content" flex>
+<!--linki zewnętrzne start-->
+	<div hide-gt-sm>
+    <md-content layout="column" id="links" flex>
       <div ng-controller="AppCtrl" layout="column" ng-cloak class="md-inline-form">
-  <md-content md-theme="docs-dark">
 	<md-fab-toolbar md-open="false" md-direction="left">
     <md-fab-trigger>
       <md-button class="md-fab md-primary">
@@ -49,9 +30,6 @@
     </md-fab-trigger>
     <md-toolbar>
       <md-fab-actions class="md-toolbar-tools">
-        <md-button class="md-fab md-primary" ng-href="{{loginUrl}}">
-			<i class="material-icons md-24">settings_power</i>
-		</md-button>
 		<md-button class="md-fab md-primary" target="_blank" ng-href="{{WMIUrl}}">
 			WMI
 		</md-button>
@@ -61,10 +39,27 @@
       </md-fab-actions>
     </md-toolbar>
 	</md-fab-toolbar>
-  </md-content>
 	  </div>
     </md-content>
-<!--linki zewnętrzne-->
+	</div>
+	<div hide-xs hide-sm layout="row">
+	<md-button class="md-fab md-primary" target="_blank" ng-href="{{UAMUrl}}">
+		UAM
+	</md-button>
+	<md-button class="md-fab md-primary" target="_blank" ng-href="{{WMIUrl}}">
+		WMI
+	</md-button>
+	</div>
+<!--linki zewnętrzne end-->
+  </md-toolbar>
+  
+  <div layout="row" flex class="change-my-css">
+    <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-sm')">
+		<md-button ng-disabled="true">stworz arkusz</md-button>
+		<md-button ng-disabled="true">wczytaj szablon</md-button>
+		<md-button ng-disabled="true">zlec badanie</md-button>
+		<md-button ng-disabled="true">przeprowadz badanie</md-button>
+    </md-sidenav>
     <md-content layout="column" id="content" flex class="md-padding">
       <div ng-controller="AppCtrl" layout="column" ng-cloak class="md-inline-form">
   <md-content md-theme="docs-dark" layout-gt-sm="row" layout-padding>
