--- a/Angular/start.html
+++ b/Angular/start.html
@@ -18,21 +18,39 @@
         <md-button ng-disabled="true">Engineer project</md-button>
       </h1>
 	</div>
-	<div hide-sm show-gt-sm flex>
-	<section layout="row">
-	<md-button class="md-fab md-primary" ng-href="{{UAMUrl}}">
-        AMU
+<!--linki zewnętrzne start-->
+	<div hide-gt-sm>
+    <md-content layout="column" id="links" flex>
+      <div ng-controller="AppCtrl" layout="column" ng-cloak class="md-inline-form">
+	<md-fab-toolbar md-open="false" md-direction="left">
+    <md-fab-trigger>
+      <md-button class="md-fab md-primary">
+		<i class="material-icons">reorder</i>
+      </md-button>
+    </md-fab-trigger>
+    <md-toolbar>
+      <md-fab-actions class="md-toolbar-tools">
+		<md-button class="md-fab md-primary" target="_blank" ng-href="{{WMIUrl}}">
+			WMI
+		</md-button>
+		<md-button class="md-fab md-primary" target="_blank" ng-href="{{UAMUrl}}">
+			UAM
+		</md-button>
+      </md-fab-actions>
+    </md-toolbar>
+	</md-fab-toolbar>
+	  </div>
+    </md-content>
+	</div>
+	<div hide-xs hide-sm layout="row">
+	<md-button class="md-fab md-primary" target="_blank" ng-href="{{UAMUrl}}">
+		UAM
 	</md-button>
-    <md-button class="md-fab md-primary" ng-href="{{WMIUrl}}">
+	<md-button class="md-fab md-primary" target="_blank" ng-href="{{WMIUrl}}">
 		WMI
 	</md-button>
 	</div>
-	<div show-sm hide-gt-sm flex>
-	<md-switch class="md-primary" md-no-ink aria-label="Switch No Ink" ng-model="data.cb5">
-	Menu
-	</md-switch>
-	</section>
-	</div>
+<!--linki zewnętrzne end-->
   </md-toolbar>
   
   <div layout="row" flex class="change-my-css">
