--- a/Angular/user.html
+++ b/Angular/user.html
@@ -18,21 +18,10 @@
         <md-button ng-href="{{userUrl}}">Engineer project</md-button>
       </h1>
 	</div>
-  </md-toolbar>
-
-  <div layout="row" flex class="change-my-css">
-<!--menu boczne start-->
-    <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-sm')">
-		<md-button ng-href="{{arkuszUrl}}">stworz arkusz</md-button>
-		<md-button ng-href="{{loadUrl}}">wczytaj szablon</md-button>
-		<md-button>zlec badanie</md-button>
-		<md-button>przeprowadz badanie</md-button>
-    </md-sidenav>
-<!--menu boczne end-->
 <!--linki zewnętrzne start-->
+	<div hide-gt-sm>
     <md-content layout="column" id="links" flex>
       <div ng-controller="AppCtrl" layout="column" ng-cloak class="md-inline-form">
-  <md-content md-theme="docs-dark">
 	<md-fab-toolbar md-open="false" md-direction="left">
     <md-fab-trigger>
       <md-button class="md-fab md-primary">
@@ -53,10 +42,32 @@
       </md-fab-actions>
     </md-toolbar>
 	</md-fab-toolbar>
-  </md-content>
 	  </div>
     </md-content>
+	</div>
+	<div hide-xs hide-sm layout="row">
+	<md-button class="md-fab md-primary" target="_blank" ng-href="{{UAMUrl}}">
+		UAM
+	</md-button>
+	<md-button class="md-fab md-primary" target="_blank" ng-href="{{WMIUrl}}">
+		WMI
+	</md-button>
+	<md-button class="md-fab md-primary" ng-href="{{loginUrl}}">
+		<i class="material-icons md-24">settings_power</i>
+	</md-button>
+	</div>
 <!--linki zewnętrzne end-->
+  </md-toolbar>
+
+  <div layout="row" flex class="change-my-css">
+<!--menu boczne start-->
+    <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-sm')">
+		<md-button ng-href="{{arkuszUrl}}">stworz arkusz</md-button>
+		<md-button ng-href="{{loadUrl}}">wczytaj szablon</md-button>
+		<md-button>zlec badanie</md-button>
+		<md-button>przeprowadz badanie</md-button>
+    </md-sidenav>
+<!--menu boczne end-->
   </div>
   <!-- Angular Material Dependencies -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.6/angular.js"></script>
